# rcutils

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  CODEOWNERS  Doxyfile  LICENSE  QUALITY_DECLARATION.md  README.md  package.xml
.github/workflows/: fork_checker.yml
cmake/: get_default_rc_logging_implementation.cmake  rcutils_check_c_compiler_uses_glibc.cmake
include/c_utilities/: concat.h  error_handling.h  file_permissions.h  filesystem.h  get_env.h  macros.h  split.h  types.h
include/c_utilities/types/: string_array.h  utilities_ret.h
include/rcutils/: allocator.h  assert.h  cmdline_parser.h  concat.h  directory_and_file_reader.h  env.h  error_handling.h  event_types.h  executor_event_types.h  filesystem.h  find.h  format_string.h  get_env.h  isalnum_no_locale.h  logging.h  logging_external_interface.h  macros.h  memset.h  process.h  program.h  qsort.h  repl_str.h  sha256.h  shared_library.h  snprintf.h  split.h  stdatomic_helper.h  strcasecmp.h  strdup.h  strerror.h  strncpy.h  strnlen.h  thread.h  thread_attr.h  time.h  types.h  visibility_control.h  zero_memory.h  zero_memory_explicit.h
include/rcutils/stdatomic_helper/win32/: stdatomic.h
include/rcutils/testing/: fault_injection.h
include/rcutils/testing_utils/: time_bomb_allocator_testing_utils.h
include/rcutils/types/: array_list.h  char_array.h  hash_map.h  rcutils_ret.h  serialized_message.h  string_array.h  string_map.h  uint8_array.h  unsigned_char_array.h
rcutils/: logging.py
resource/: logging_macros.h.em  version.h.in
scripts/: empy
src/: AVL_Height  BFS AVL in C.c  allocator.c  array_list.c  char_array.c  cmdline_parser.c  common.h  concat.c  directory_and_file_reader.c  env.c  env_zephyr.c  error_handling.c  error_handling_helpers.h  file_permissions.c  filesystem.c  find.c  format_string.c  get_env.c  hash_map.c  logging.c  process.c  program.c  repl_str.c  rwlock.c  rwlock.h  rwlock_pthread.c  rwlock_stub.c  rwlock_win32.c  security_directory.c  serialized_message.c  sha256.c  shared_library.c  snprintf.c  split.c  strcasecmp.c  strdup.c  strerror.c  string_array.c  string_map.c  strnlen.c  (+8 more)
src/testing/: fault_injection.c
test/: allocator_testing_utils.h  test_allocator.cpp  test_array_list.cpp  test_assert.cpp  test_atomics.c  test_benchmark_error_handling.cpp  test_benchmark_logging.cpp  test_char_array.cpp  test_cmdline_parser.cpp  test_concat.cpp  test_directory_and_file_reader.cpp  test_env.cpp  test_error_handling.cpp  test_error_handling_helpers.cpp  test_filesystem.cpp  test_find.cpp  test_format_string.cpp  test_get_env.cpp  test_hash_map.cpp  test_isalnum_no_locale.cpp  test_logging.cpp  test_logging_console_output_handler.cpp  test_logging_custom_env.cpp  test_logging_enable_for.cpp  test_logging_long_messages.cpp  test_logging_long_messages.py  test_logging_macros.c  test_logging_macros.cpp  test_logging_output_format.py  test_logging_output_format_complicated_escape.regex  test_logging_output_format_edge_cases.txt  test_logging_output_format_escape.regex  test_logging_output_format_escape_sequence.regex  test_logging_output_format_simple_escape.regex  test_logging_output_timestamps.regex  test_process.cpp  test_repl_str.cpp  test_serialized_message.cpp  test_sha256.cpp  test_shared_library.cpp  (+15 more)
test/benchmark/: benchmark_error_handling.cpp  benchmark_logging.cpp  test_benchmark_logging.cpp
test/dummy_shared_library/: dummy_shared_library.c  dummy_shared_library.cpp  dummy_shared_library.h
test/memory_tools/: CMakeLists.txt  memory_tools.hpp  memory_tools_common.cpp  scope_exit.hpp  test_memory_tools.cpp
test/mocking_utils/: filesystem.hpp  patch.hpp  remove_noexcept.hpp  stdio.hpp
zephyr/: CMakeLists.txt  Kconfig  module.yml
